[tool.poetry]
name = "dhan-trading-scanner"
version = "0.1.0"
description = "Dhan trading bot for stock scanning and automated trading"
authors = ["Sandeep Jaiswar <jaiswarsandeep119@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = ">=3.1,<4.0"
gunicorn = "~23.0.0"
redis = ">=5.0.1,<6.0"
python-dotenv = ">=1.0,<2.0"
sentry-sdk = ">=1.40,<2.0"
python-json-logger = ">=2.0,<3.0"
requests = ">=2.31,<3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.12"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
